# hot-seahorse

./: .gitignore  .gitmodules  LICENSE  README.md  cookies-dy.txt  cookies-yt copy.txt  cookies.txt  pyproject.toml  requirements.txt  setup.py
scripts/: test.sql
src/: requirements.txt  t.txt  xhs_cookies.txt
src/config/: settings.py
src/scripts/: test.sql
src/services/: __init__.py  tiktok_service.py  tk_329.py  xhs_service-1.py  xhs_service.py
src/tests/: server_whisper_test.py  temp_settings.json  test_whisper_faster.py  test_xhs_service.py  tk_cookie.txt  tk_down_test.py  xhs_downloader.py  xhs_downloader_test.py  yt_get_ks_info.py  yt_get_tk_info.py  yt_get_xhs_info.py  yt_get_ytb_info.py  yt_test_dy.py  yt_test_xhs.py
src/utils/: exceptions.py  tiktok_exceptions.py
